index.css
@font-face {
    font-family: Moderne;
    src: url(./Moderne-Sans-Font/Moderne\ Sans\ Font.ttf);
  }


body {
    background: #ECE9E6;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
    margin-top: 2vh;
    font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
    scroll-behavior: smooth;
}

/* First Navigation Styles */

nav a:link {
    color:black;
}

/* anchor tags which are being pressed/clicked */
nav a:active {
    color: black;
}

/* anchor tags which have an href which exists in the browser's history */
nav a:visited {
    color: black;
}

a:active {
    color:purple;
}

.navigation {
    display: flex;
    height: 5vh;
    width: 100%;
    align-items:center;
    justify-content:center;
}

#sun {
    margin-inline: 2rem;
    cursor: pointer;
    transition: all 0.2s;
}

.socialicons {
    display: flex;
}


.icon {
    margin-inline: 5vw;
}

.fa-sun {
    color: black;
}


/* Main Page with Image */

.main {
    height:95vh;
    display: flex;
    justify-content:center;
    align-items: center;
    flex-direction: column;
    color: rgb(88, 92, 99);
    text-transform: uppercase;
    font-family: Moderne;
    letter-spacing: 0.1rem;
    font-size: 1.1rem;
}

img {
    width: 96vw;
    height: 48vh;
    border-radius: 12px;
}

.name h1 {
    text-align: center;
}

.name p {
    font-size: 0.9rem;
}

/* Second Navigation Styles */

.aboutnav {
    display: flex;
    align-items:center;
    justify-content:space-around;
    height: 9vh;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    position: sticky;
    top: 0;
    z-index: 999;
    box-shadow: 1 3px 15px rgb(0 0 0 / 0.2);
    background-color: #ECE9E6;
}


.aboutnav a:link {
    text-decoration: none;
    color: black;
}

.aboutnav a:visited {
    text-decoration: none;
    color: black;
}

.aboutnav a:active {
    text-decoration: none;
    color: orangered;
}


/* About Page (nice to see you section) */

.about {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    flex: 2;
    max-width: 80%;
    height: calc(100vh - 9vh);
    margin: 1rem auto;
    z-index: 1;
}

#yugam {
    text-decoration-line: underline;
    text-decoration-color: rgba(216,180,254,.6);
}

.aboutpara {
    text-align: justify;
}

/* myskills Page (skills section) */


.technologies {
    height: 91vh;
    padding: 2vh;
    max-width: 80%;
    margin: auto;
    text-align: justify;
}

.myskills {
    font-size: 2rem;
    font-weight: lighter;
    height: 11vh;
    padding-top: 2rem;
}

.skillspara {
    text-align: justify;
    height: 20vh;
    justify-content: center;
    align-items: center;
}

.techicons {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(20vw, 1fr));
    justify-items: center;
    align-items:center;
    height:40vh;
}


/* Projects Section (Coming Soon part) */

.projects {
    min-height: 91vh;
    padding: 2vh;
    max-width: 80%;
    margin: auto;
    text-align: justify;
}



.projectdesc {
    text-align: center;
    display: grid;
    place-items: center;
    min-height: 70vh;
}


/* Work Experience Section (experience part) */

.workexperience {
    min-height: 91vh;
    padding: 2vh;
    max-width: 90%;
    text-align: justify;
}

.timeline {
  display: flex;
  justify-content: center;
  align-items: center;
}

.outer {
    border-left: 1px solid #333;
    width: 70vw;
    justify-content: center;
    align-items: center;
}

.card {
    position: relative;
    margin: 0 0 20px 20px;
    padding: 1.5rem;
    background: white;
    color: black;
    border-radius: 15px;
    max-width: 100%;
  }

  .info {
    display: grid;
    gap: 10px;
  }

  .title::before {
    content: "";
    position: absolute;
    width: 8px;
    height: 8px;
    background-color: white;
    border-radius: 999px;
    left: -28px;
    border: 2.5px solid black;
  }

  .company, .time {
    font-size: 0.9rem ;
    line-height: 0.7rem;
    font-weight: 600;
  }

  .workdescription {
    font-size: 0.95rem;
  }


/* Footer Section */

footer {
    text-align: center;
}

